core develop started 05.11.2022

--- a/coreUI/src/main/res/layout/dialog.xml
+++ b/coreUI/src/main/res/layout/dialog.xml
@@ -18,16 +18,16 @@
         <TextView
             android:id="@+id/playlist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/font_size_large"
 
-            android:fontFamily="@font/a_lcdnova_allfont_ru"
             android:layout_marginLeft="4dp"
+            android:fontFamily="@font/a_lcdnova_allfont_ru"
             android:gravity="center_vertical"
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textSize="@dimen/font_size_large"
+            android:textSize="@dimen/font_size_regular"
             tools:text="hello" />
     </FrameLayout>
 
@@ -46,7 +46,6 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:clickable="false"
             android:visibility="visible" />
 
@@ -61,7 +60,7 @@
 
         <View
             android:id="@+id/disableView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#88000000"
             android:visibility="gone" />
