--- a/trackdialogFeature/src/main/res/layout/track_dialog.xml
+++ b/trackdialogFeature/src/main/res/layout/track_dialog.xml
@@ -17,7 +17,9 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <include layout="@layout/dialog" />
+        <include
+            android:id="@+id/recyclerViewContainer"
+            layout="@layout/dialog" />
 
         <LinearLayout
             android:layout_width="match_parent"
