--- a/coreUI/src/main/res/layout/dialog.xml
+++ b/coreUI/src/main/res/layout/dialog.xml
@@ -37,9 +37,9 @@
         android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:background="@drawable/button_space"
-        android:paddingLeft="2dp"
+        android:paddingLeft="8dp"
         android:paddingTop="5dp"
-        android:paddingRight="2dp"
+        android:paddingRight="8dp"
         android:paddingBottom="5dp">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -47,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="false"
-            android:visibility="visible" />
+            tools:itemCount="30"
+            tools:listitem="@layout/item_playlist" />
 
         <ProgressBar
             android:id="@+id/progressBar"
