--- a/trackdialogFeature/src/main/res/layout/item_media.xml
+++ b/trackdialogFeature/src/main/res/layout/item_media.xml
@@ -28,7 +28,7 @@
         android:focusable="true"
         android:gravity="center_vertical"
         android:singleLine="true"
-        android:textColor="@color/tint"
+        android:textColor="@color/item_activateble_state_list"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:text="file selected"></TextView>
