--- a/coreUI/src/main/res/values/categories.xml
+++ b/coreUI/src/main/res/values/categories.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="categories">
-        <item>one</item>
-
+        <item>@string/artists</item>
+        <item>@string/artists</item>
     </string-array>
 </resources>
