--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -37,7 +37,7 @@
                     android:textSize="@dimen/font_size_regular" />
 
                 <TextView
-                    android:id="@+id/dialogTitle"
+                    android:id="@+id/dialog_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
