e2e network source add test passed 11.09.2023

--- a/coreUI/src/main/res/layout/playlist_dialog.xml
+++ b/coreUI/src/main/res/layout/playlist_dialog.xml
@@ -36,7 +36,7 @@
                 android:visibility="visible">
 
                 <EditText
-                    android:id="@+id/path"
+                    android:id="@+id/networkPath"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
