--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -84,7 +84,7 @@
                 android:layout_weight="2"
                 android:background="@drawable/border_left_right">
 
-                <com.yes.player.presentation.VisualizerView
+                <com.yes.player.presentation.ui.VisualizerView
                     android:id="@+id/visualizer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
