playlist dialog commit 4.10.2023

--- a/playListDialogFeature/src/main/res/layout/item_playlist.xml
+++ b/playListDialogFeature/src/main/res/layout/item_playlist.xml
@@ -23,7 +23,7 @@
         tools:text="id" />
 
     <TextView
-        android:id="@+id/song_title"
+        android:id="@+id/playlist_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
