--- a/coreUI/src/main/res/layout/item_track.xml
+++ b/coreUI/src/main/res/layout/item_track.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/song_title"
+            android:id="@+id/playlist_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
