--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -16,7 +16,9 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <include layout="@layout/dialog" />
+        <include
+            android:id="@+id/recyclerViewContainer"
+            layout="@layout/dialog" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +38,7 @@
                 android:visibility="visible">
 
                 <EditText
-                    android:id="@+id/networkPath"
+                    android:id="@+id/playlistName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
@@ -48,7 +50,7 @@
             </FrameLayout>
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/playlist_btn"
+                android:id="@+id/add_playlist_btn"
                 android:layout_width="@dimen/button_Width_small"
                 android:layout_height="@dimen/button_height_small"
 
@@ -59,7 +61,9 @@
 
         </LinearLayout>
 
-        <include layout="@layout/cancel_ok" />
+        <include
+            android:id="@+id/buttons"
+            layout="@layout/cancel_ok" />
 
     </LinearLayout>
 
