--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/panel_flat"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:theme="@style/Theme.MusicPlayer">
 
 
     <LinearLayout
