--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/player_controls"
-            android:name="com.yes.playlistfeature.presentation.ui.PlaylistFragment"
+            android:name="com.yes.playlistfeature.presentation.ui.Playlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
