activity main xml bug fixed item track xml improved playlist feature models with mappers improved 16.10.2023

--- a/coreUI/src/main/res/values/dimensions.xml
+++ b/coreUI/src/main/res/values/dimensions.xml
@@ -3,9 +3,13 @@
     <dimen name="font_size_regular">14sp</dimen>
     <dimen name="font_size_large">18sp</dimen>
     <dimen name="font_size_coloss">22sp</dimen>
+    <dimen name="font_size_small">9sp</dimen>
 
     <dimen name="button_height_regular">40dp</dimen>
     <dimen name="button_height_small">36dp</dimen>
     <dimen name="button_Width_small">80dp</dimen>
 
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_medium">16dp</dimen>
+    <dimen name="padding_large">24dp</dimen>
 </resources>
