--- a/playlistFeature/src/main/res/layout/item_track.xml
+++ b/playlistFeature/src/main/res/layout/item_track.xml
@@ -5,64 +5,73 @@
     android:layout_height="wrap_content"
     android:background="@drawable/playlist_item_background_selectable"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical"
-    android:padding="1dp">
+    android:orientation="horizontal"
+    android:padding="@dimen/padding_small">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/playlist_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:layout_weight="1"
-
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:scrollHorizontally="true"
-
-            android:singleLine="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/item_activatable_state_list"
-            android:textStyle="bold"
-            tools:text="Song title" />
-
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="4dp"
-            android:layout_weight="5"
-            android:textAlignment="textEnd"
-            android:textColor="@color/item_activatable_state_list"
-            android:textSize="9sp"
-            tools:text="3:30" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/position"
+        android:layout_width="@dimen/font_size_coloss"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="@color/item_activatable_state_list"
+        android:textStyle="bold"
+        tools:text="10" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/playlist_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/item_activatable_state_list"
+                android:textSize="@dimen/font_size_regular"
+                android:textStyle="bold"
+                tools:text="Song title" />
+
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/item_activatable_state_list"
+                android:textSize="@dimen/font_size_regular"
+                tools:text="3:30" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/song_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:layout_margin="4dp"
+
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textColor="@color/item_activatable_state_list"
-            android:textSize="9sp"
+            android:textSize="@dimen/font_size_small"
             tools:text="song info" />
+
     </LinearLayout>
 
 </LinearLayout>
