--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -87,13 +87,17 @@
             </LinearLayout>
 
             <FrameLayout
+                android:id="@+id/composeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:background="@drawable/border_left_right">
-
                 <com.yes.player.presentation.ui.VisualizerView
                     android:id="@+id/visualizer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <androidx.compose.ui.platform.ComposeView
+                    android:id="@+id/composeView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </FrameLayout>
