--- a/playlistFeature/src/main/res/layout/playlist.xml
+++ b/playlistFeature/src/main/res/layout/playlist.xml
@@ -12,21 +12,16 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@drawable/display">
-
-       <!--<androidx.recyclerview.widget.RecyclerView-->
-           <!-- android:id="@+id/playList"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_margin="2dp"-->
-            <!--android:background="#000000"-->
-            <!--android:scrollbars="vertical"-->
-            <!--tools:itemCount="10"-->
-            <!--tools:listitem="@layout/item_track" />-->
-        <androidx.compose.ui.platform.ComposeView
-            android:id="@+id/PlaylistScreen"
+        <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/playList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:ignore="ExtraText" />
+            android:layout_margin="2dp"
+            android:background="#000000"
+            android:scrollbars="vertical"
+            tools:itemCount="10"
+            tools:listitem="@layout/item_track" />
+
 
     </FrameLayout>
 
