--- a/playlistFeature/src/main/res/layout/item_track.xml
+++ b/playlistFeature/src/main/res/layout/item_track.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/playlist_item_background_selectable"
+    android:background="@drawable/background"
     android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal"
     android:padding="@dimen/padding_small">
