refactor: custom data picker infinite scroll 19.12.2023

--- a/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
@@ -23,24 +23,51 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"/>-->
-        <FrameLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/datepicker"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="#FF0000" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp">
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="top"
-                android:alpha="0.8"
-                android:scaleType="centerCrop"
-                android:src="@drawable/gradient_background" />
-        </FrameLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/datePickerHour"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="#FF0000" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="top"
+                    android:alpha="0.8"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/gradient_background" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/datePickerMinute"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="#FF0000" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="top"
+                    android:alpha="0.8"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/gradient_background" />
+            </FrameLayout>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
