--- a/alarmClockFeature/src/main/res/layout/date_picker_item.xml
+++ b/alarmClockFeature/src/main/res/layout/date_picker_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/border_top_bottom"
     android:padding="7dp">
 
     <TextView
