--- a/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
@@ -26,45 +26,54 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/panel_flat"
             android:orientation="horizontal">
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:background="@drawable/display">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/picker_barrel" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/datePickerHour"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="#FF0000" />
+                    android:layout_height="80dp" />
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="top"
                     android:alpha="0.8"
-                    android:scaleType="centerCrop"
                     android:src="@drawable/gradient_background" />
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:background="@drawable/display">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/picker_barrel" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/datePickerMinute"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="#FF0000" />
+                    android:layout_height="80dp" />
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="top"
                     android:alpha="0.8"
-                    android:scaleType="centerCrop"
                     android:src="@drawable/gradient_background" />
             </FrameLayout>
         </LinearLayout>
@@ -153,40 +162,10 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_margin="2dp"
-            android:background="@drawable/button_space"
-            android:orientation="horizontal">
+        <include
+            android:id="@+id/buttons"
+            layout="@layout/cancel_ok"
+            android:layout_weight="1" />
 
-            <ImageButton
-                android:id="@+id/cancel_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginRight="1dp"
-                android:layout_marginBottom="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_left"
-                android:padding="2dp"
-
-                app:srcCompat="@drawable/window_close" />
-
-            <ImageButton
-                android:id="@+id/ok_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginRight="1dp"
-                android:layout_marginBottom="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_right"
-                android:padding="2dp"
-
-                app:srcCompat="@drawable/check" />
-        </LinearLayout>
     </LinearLayout>
     </FrameLayout>
