--- a/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
+++ b/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
@@ -19,23 +19,21 @@
 
             <TextView
                 android:id="@+id/alarm_time"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:layout_weight="4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
                 android:scrollHorizontally="true"
                 android:text="00:00"
+                android:textAlignment="viewEnd"
                 android:textColor="#918F8F"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="25sp"
-                app:autoSizeMinTextSize="8sp"
-                app:autoSizeTextType="uniform" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_weight="2"
                 android:orientation="vertical">
 
@@ -43,7 +41,8 @@
                     android:id="@+id/alarm_time_left"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/text_gray" />
 
                 <TextView
                     android:id="@+id/alarm_repeat_days"
@@ -51,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:text="TextView"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/text_gray"
                     android:textSize="8sp" />
             </LinearLayout>
 
