--- a/coreUI/src/main/res/drawable/button_center.xml
+++ b/coreUI/src/main/res/drawable/button_center.xml
@@ -1,154 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="false"
-        >
+    <item android:state_pressed="false">
         <layer-list>
+
             <item >
                 <shape
                     android:shape="rectangle">
-
-                    <solid
-                        android:color="@color/light" />
-                    <padding
-                        android:left="0dp"
-                        android:top="0dp"
-                        android:right="0dp"
-                        android:bottom="1dp" />
-                </shape>
-            </item>
-            <item >
-                <shape
-                    android:shape="rectangle">
-
-                    <padding
-                        android:left="1dp"
-                        android:top="2dp"
-                        android:right="1dp"
-                        android:bottom="0dp" />
-                    <solid
-                        android:color="@color/black" />
-                </shape>
-            </item>
-            <item>
-                <shape
-                    android:shape="rectangle">
-
-                    <solid
-                        android:color="@color/light" />
                     <padding
                         android:left="0dp"
                         android:top="1dp"
                         android:right="0dp"
                         android:bottom="0dp" />
-                </shape>
-            </item>
-            <item >
-                <shape
-                    android:shape="rectangle">
-
-                    <padding
-                        android:left="0dp"
-                        android:top="0dp"
-                        android:right="0dp"
-                        android:bottom="2dp" />
                     <solid
-                        android:color="@color/black" />
+                        android:color="@color/light" />
                 </shape>
             </item>
-
-
-
             <item >
-                <shape
-                    android:shape="rectangle">
-
-
+                <shape android:shape="rectangle">
                     <gradient
                         android:angle="90"
                         android:startColor="@color/button_startColor"
                         android:centerColor="@color/button_centerColor"
                         android:endColor="@color/button_endColor"
                         android:type="linear" />
-
-
                 </shape>
             </item>
-
         </layer-list>
-
     </item>
-    <item android:state_pressed="true"
-        >
+    <item android:state_pressed="true">
         <layer-list>
             <item >
                 <shape
                     android:shape="rectangle">
-
-                    <solid
-                        android:color="@color/light" />
-                    <padding
-                        android:left="0dp"
-                        android:top="0dp"
-                        android:right="0dp"
-                        android:bottom="1dp" />
-                </shape>
-            </item>
-            <item >
-                <shape
-                    android:shape="rectangle">
-
-                    <padding
-                        android:left="1dp"
-                        android:top="2dp"
-                        android:right="1dp"
-                        android:bottom="0dp" />
-                    <solid
-                        android:color="@color/black" />
-                </shape>
-            </item>
-            <item>
-                <shape
-                    android:shape="rectangle">
-
-                    <solid
-                        android:color="@color/light" />
-                    <padding
-                        android:left="0dp"
-                        android:top="1dp"
-                        android:right="0dp"
-                        android:bottom="0dp" />
-                </shape>
-            </item>
-            <item >
-                <shape
-                    android:shape="rectangle">
-
-                    <padding
-                        android:left="0dp"
-                        android:top="0dp"
-                        android:right="0dp"
-                        android:bottom="2dp" />
-                    <solid
-                        android:color="@color/black" />
-                </shape>
-            </item>
-
-
-
-            <item >
-                <shape
-                    android:shape="rectangle">
-
-
                     <gradient
                         android:angle="90"
                         android:startColor="@color/button_startColor_pressed"
                         android:centerColor="@color/button_centerColor_pressed"
                         android:endColor="@color/button_endColor_pressed"
                         android:type="linear" />
-
-
                 </shape>
             </item>
 
