--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -23,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height_small"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical"
@@ -41,24 +41,28 @@
                 <EditText
                     android:id="@+id/playlistName"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
 
                     android:layout_marginLeft="4dp"
                     android:text="@string/newPlaylist"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/green"
-                    tools:visibility="visible" />
+                    android:textColor="@color/green" />
             </FrameLayout>
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/add_playlist_btn"
-                android:layout_width="@dimen/button_Width_small"
-                android:layout_height="@dimen/button_height_small"
-
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:background="@drawable/button_single"
-                app:srcCompat="@drawable/playlist_plus"
-                app:tint="@color/tint_pressed_state_list" />
+                android:layout_weight="4"
+                android:background="@drawable/button_space">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/add_playlist_btn"
+                    style="@style/buttonSingleLow"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/button_single"
+                    app:srcCompat="@drawable/playlist_plus" />
+            </FrameLayout>
 
         </LinearLayout>
 
