--- a/trackdialogFeature/src/main/res/layout/track_dialog.xml
+++ b/trackdialogFeature/src/main/res/layout/track_dialog.xml
@@ -19,7 +19,9 @@
 
         <include
             android:id="@+id/recyclerViewContainer"
-            layout="@layout/dialog" />
+            layout="@layout/dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,27 +30,34 @@
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:visibility="visible">
+            android:visibility="gone">
 
 
-            <CheckBox
-                android:id="@+id/network_btn"
-                android:layout_width="@dimen/button_Width_small"
-                android:layout_height="@dimen/button_height_small"
-                android:background="@drawable/button_single"
-                android:button="@null"
-                android:checked="true"
-                android:foreground="@drawable/wan"
-                android:foregroundGravity="center"
-                android:foregroundTint="@color/tint_pressed_state_list" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_space">
+
+                <CheckBox
+                    android:id="@+id/network_btn"
+                    style="@style/buttonSingleLow"
+                    android:layout_width="@dimen/button_Width_small"
+                    android:layout_height="@dimen/button_height_small"
+                    android:background="@drawable/button_single"
+                    android:button="@null"
+                    android:checked="true"
+                    android:foreground="@drawable/wan"
+                    android:foregroundGravity="center"
+                    android:foregroundTint="@color/tint_pressed_state_list" />
+            </FrameLayout>
+
             <FrameLayout
                 android:id="@+id/path_panel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_space"
-                android:visibility="visible">
+                android:layout_weight="4"
+                android:background="@drawable/button_space">
 
                 <EditText
                     android:id="@+id/networkPath"
@@ -64,7 +73,9 @@
 
         <include
             android:id="@+id/buttons"
-            layout="@layout/cancel_ok" />
+            layout="@layout/cancel_ok"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
