--- a/equalizerFeature/src/main/res/layout/equalizer.xml
+++ b/equalizerFeature/src/main/res/layout/equalizer.xml
@@ -17,12 +17,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="right|center_horizontal"
-            android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/display"
             android:baselineAligned="true"
             android:orientation="horizontal"
-            android:padding="10dp" >
+            android:padding="10dp">
 
             <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
                 android:id="@+id/verticalSeekBar"
@@ -57,76 +56,40 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1.5"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal|center_vertical"
             android:background="@drawable/panel_flat"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/switch1"
+                style="@style/yesSwitch"
+                android:layout_gravity="center_vertical"
+                 />
 
             <LinearLayout
+                style="@style/padding"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    style="@style/textLabel"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:singleLine="false"
+                    android:text="@string/preset"
+                    android:textAlignment="center"
+                    android:textSize="14sp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <com.musicplayer.alarmclock.SwitchCustom
-                            android:id="@+id/equalizerSwitch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:thumb="@drawable/thumb"
-                            app:splitTrack="false"
-                            app:track="@drawable/switch_selector" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="3"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight="3"
-                                android:gravity="center_vertical"
-                                android:singleLine="false"
-                                android:text="@string/preset"
-                                android:textAlignment="center"
-                                app:autoSizeMaxTextSize="12sp"
-                                app:autoSizeMinTextSize="8sp"
-                                app:autoSizeTextType="uniform" />
-
-                            <Spinner
-                                android:id="@+id/presetsSpinner"
-                                style="@style/Widget.AppCompat.Spinner.DropDown"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginLeft="5dp"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginRight="5dp"
-                                android:layout_marginBottom="2dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/button_space" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                <Spinner
+                    android:id="@+id/presetsSpinner"
+                    style="@style/margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button_space"
+                    android:dropDownWidth="wrap_content" />
 
             </LinearLayout>
 
