--- a/equalizerFeature/src/main/res/drawable/trackbar_progress.xml
+++ b/equalizerFeature/src/main/res/drawable/trackbar_progress.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-    <item android:id="@android:id/background"
-        android:top="15dp"
-        android:bottom="15dp"
-            android:drawable="@drawable/trackbardisabled">
-    </item>
-
-    <item android:id="@android:id/progress"
-        android:bottom="15dp"
-
-        android:top="15dp">
-        <clip
-            android:clipOrientation="vertical"
-            android:gravity="bottom"
-
-            android:drawable="@drawable/trackbarenabled"/>
-    </item>
-
-</layer-list>
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:pivotX="0%"
+    android:pivotY="0%"
+    android:fromDegrees="0"
+    android:toDegrees="0">
+    <layer-list >
+        <item
+            android:id="@android:id/background"
+            android:drawable="@drawable/trackbardisabledh"
+            >
+        </item>
+        <item
+            android:id="@android:id/progress">
+            <clip
+                android:clipOrientation="horizontal"
+                android:drawable="@drawable/trackbarenabledh"
+                android:gravity="left" />
+        </item>
+    </layer-list>
+</rotate>
